@@ -975,7 +975,7 @@ followed by one or more digits.
 <p>We can define a type for this purpose as follows:
 
 <pre>
-D> type empno possrep { no string }
+D> type empno possrep (no string)
 D> constraint no regex_like '^E[0-9]+$' or no = ''
 D> init empno('');
 Type empno defined.
@@ -1033,8 +1033,8 @@ can be implemented using Duro D/T.
 
 <pre>
 type point
-    possrep cartesian { x float, y float }
-    possrep polar { r float, theta float }
+    possrep cartesian (x float, y float)
+    possrep polar (r float, theta float)
     init cartesian(0.0, 0.0);
 
 implement type point as tuple { x float, y float };
@@ -1114,9 +1114,9 @@ suptyping support is limited in that only dummy types
 <pre>
 D> type shape union;
 Type shape defined.
-D> type circle is shape possrep { radius int } init circle(0);
+D> type circle is shape possrep (radius int) init circle(0);
 Type circle defined.
-D> type rectangle is shape possrep { width int, height int } init rectangle(0,0);
+D> type rectangle is shape possrep (width int, height int) init rectangle(0,0);
 Type rectangle defined.
 D> implement type circle;
 D> end implement;
@@ -1271,7 +1271,7 @@ avoiding a mutual dependency between databases and packages.
 <pre>
 package emp;
 
-    type empno possrep { no int } init emp.empno(0);
+    type empno possrep (no int) init emp.empno(0);
 
 end package;
 
